--- a/sass/blocks/_services.sass
+++ b/sass/blocks/_services.sass
@@ -76,7 +76,7 @@ p
   flex-wrap: wrap
   margin-bottom: 2rem
 .content__item
-  min-width: 380px
+  min-width: 300px
   display: flex
   align-items: center
   // margin: 1rem
@@ -187,9 +187,13 @@ p
     font-size: calc( 60% )
 
 @media ( max-width: 530px )
+  .content-text-wrap
+    padding: 0
+  .img_responsive
+    width: 50%
+  .content__item
+    padding: 0
   .slogan__text
     font-size: calc( 30% )
-
-
-
-  
+  h2
+    font-size: 13px
